# BomTool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  cpresets.txt  install.py
src/: CMakeLists.txt  kicad.cpp  kicad.hpp  main.cpp
support/conan/: README.md
